--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cat Test\QueryTest\" />
+  </ItemGroup>
+
 </Project>
