Established a connection to a remote db

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "defaultConnection": "server=localhost;port=3306;user=root;password=Robert123;database=robdb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,9 @@
   },
   "AllowedHosts": "*"
 }
+
+
+
+
+
+
