Connection is not hundred percent. and i added a jwt key

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "Jwt": {
+    "Key": "YOUR_SECRET_KEY_HERE",
+    "Issuer": "YOUR_ISSUER",
+    "Audience": "YOUR_AUDIENCE"
+  }
+
 }
 
 
