--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "SecretKey": "a-very-long-and-secure-secret-key-that-is-at-least-64-bytes-long",
+    "Issuer": "Your-Issuer",
+    "Audience": "Your-Audience"
+  }
 }
