Commit and push to get access through pc

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;port=3306;Database=RealDB;User=root;Password=Robert123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,4 +15,6 @@
     "Issuer": "Your-Issuer",
     "Audience": "Your-Audience"
   }
+  
 }
+
